# aivika-experiment-provider

./: LICENSE  aivika-experiment-provider.cabal  aivikasim-experiment-provider.cabal
Simulation/Aivika/Experiment/: Provider.hs
Simulation/Aivika/Experiment/IO/: Provider.hs
Simulation/Aivika/Experiment/Provider/: DeviationView.hs  ExperimentAgent.hs  ExperimentAggregator.hs  FinalDeviationView.hs  FinalSamplingStatsView.hs  FinalTimingStatsView.hs  LastValueListView.hs  LastValueView.hs  MultipleLastValueListView.hs  MultipleValueListView.hs  SamplingStatsView.hs  TimeSeriesView.hs  TimingStatsView.hs  Types.hs  Utils.hs  ValueListView.hs
Simulation/Aivika/Experiment/Provider/View/: DeviationView.hs  TimeSeriesView.hs
Simulation/Aivika/Experiment/Trans/: Provider.hs
Simulation/Aivika/Experiment/Trans/Provider/: DeviationView.hs  FinalDeviationView.hs  FinalSamplingStatsView.hs  FinalTimingStatsView.hs  LastValueListView.hs  LastValueView.hs  MultipleLastValueListView.hs  MultipleValueListView.hs  SamplingStatsView.hs  TimeSeriesView.hs  TimingStatsView.hs  Types.hs  ValueListView.hs
Simulation/Aivika/Experiment/Trans/Provider/View/: DeviationView.hs  TimeSeriesView.hs
