name:            aivika-experiment-provider
version:         0.7
synopsis:        Simulation experiment data provider for Aivika
description:
    It provides with the results of simulation experiments [1].
    .
    \[1] <http://hackage.haskell.org/package/aivika-experiment>
    .
category:        Simulation
license:         AllRightsReserved
license-file:    LICENSE
copyright:       (c) 2017. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://www.aivikasoft.com
cabal-version:   >= 1.6
build-type:      Simple
tested-with:     GHC == 8.0.2

library

    exposed-modules: Simulation.Aivika.Experiment.Provider
                     Simulation.Aivika.Experiment.Provider.Types
                     Simulation.Aivika.Experiment.Provider.Utils
                     Simulation.Aivika.Experiment.Provider.DeviationView
                     Simulation.Aivika.Experiment.Provider.FinalDeviationView
                     Simulation.Aivika.Experiment.Provider.FinalSamplingStatsView
                     Simulation.Aivika.Experiment.Provider.FinalTimingStatsView
                     Simulation.Aivika.Experiment.Provider.MultipleLastValueListView
                     Simulation.Aivika.Experiment.Provider.MultipleValueListView
                     Simulation.Aivika.Experiment.Provider.LastValueListView
                     Simulation.Aivika.Experiment.Provider.LastValueView
                     Simulation.Aivika.Experiment.Provider.SamplingStatsView
                     Simulation.Aivika.Experiment.Provider.TimeSeriesView
                     Simulation.Aivika.Experiment.Provider.TimingStatsView
                     Simulation.Aivika.Experiment.Provider.ValueListView
                     Simulation.Aivika.Experiment.Trans.Provider
                     Simulation.Aivika.Experiment.Trans.Provider.Types
                     Simulation.Aivika.Experiment.Trans.Provider.DeviationView
                     Simulation.Aivika.Experiment.Trans.Provider.FinalDeviationView
                     Simulation.Aivika.Experiment.Trans.Provider.FinalSamplingStatsView
                     Simulation.Aivika.Experiment.Trans.Provider.FinalTimingStatsView
                     Simulation.Aivika.Experiment.Trans.Provider.MultipleLastValueListView
                     Simulation.Aivika.Experiment.Trans.Provider.MultipleValueListView
                     Simulation.Aivika.Experiment.Trans.Provider.LastValueListView
                     Simulation.Aivika.Experiment.Trans.Provider.LastValueView
                     Simulation.Aivika.Experiment.Trans.Provider.SamplingStatsView
                     Simulation.Aivika.Experiment.Trans.Provider.TimeSeriesView
                     Simulation.Aivika.Experiment.Trans.Provider.TimingStatsView
                     Simulation.Aivika.Experiment.Trans.Provider.ValueListView
                     Simulation.Aivika.Experiment.IO.Provider

    build-depends:   base >= 3 && < 6,
                     mtl >= 1.1.0.2,
                     array >= 0.3.0.0,
                     time >= 1.5.0.1,
                     aivika >= 5.5,
                     aivika-transformers >= 5.5,
                     aivika-experiment >= 5.2,
                     aivika-experiment-entity >= 0.4

    extensions:      MultiParamTypeClasses,
                     TypeFamilies,
                     FlexibleInstances,
                     FlexibleContexts,
                     UndecidableInstances

    ghc-options:     -O2

source-repository head

    type:     git
    location: https://github.com/dsorokin/aivika-experiment-provider
